<resources>
    <string name="app_name">FitnessCalendar</string>
    <string name="action_settings">Settings</string>

    <!--    Survey page #1-->
    <string name="survey_heading">Growth Takes Consistency</string>
    <string name="survey_text_first_page">Real results come from steady effort, not perfection. Discipline, rest,
        and balance make training a natural part of life, not a temporary challenge.</string>
    <string name="start_survey">Start survey</string>
    <string name="survey_bg_pic_description">Shoes and stairs</string>

<!--    Survey page #2-->
    <string name="about_you">About You</string>
    <string name="back_button">Back</string>
    <string name="survey_name">Name</string>
    <string name="survey_age">Age</string>
    <string name="survey_gender">Gender</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_db">Date of Birth</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="no_gender">Prefer not to say</string>
    <string name="survey_continue">Continue</string>

<!--Survey page #3-->
    <string name="main_goal">What‘s Your Main Goal?</string>
    <string name="choose_or_write">Choose or write your own</string>

    <string name="lose_weight">Lose weight</string>
    <string name="lose_weight_add">Feel lighter in body and mind</string>

    <string name="build_muscle">Build muscle</string>
    <string name="build_muscle_add">And see what the discipline can create</string>

    <string name="get_stronger">Get stronger</string>
    <string name="get_stronger_add">Not just physically, but mentally too</string>

    <string name="stay_fit">Stay fit</string>
    <string name="stay_fit_add">And make movement a lifelong habit</string>

    <string name="recover_after_injury">Recover after injury</string>
    <string name="recover_after_injury_add">And rebuild confidence step by step</string>

    <string name="stay_active">Stay active</string>
    <string name="stay_active_add">Because health is the real goal</string>

    <string name="type_own">Or, type your own goal&#8230;</string>
    <string name="selection_circle_description">The circle for selection</string>

    <string name="own_goal">Or, type your own goal&#8230;</string>

    <!--Survey page #4-->
    <string name="survey_end_heading">Each day is a new opportunity</string>
    <string name="survey_end_button">Continue Your Journey</string>
    <string name="survey_text_last_page">A month is made of days.
        Some for rest. Some for effort.
        All of them - yours to choose.</string>

<!--    Calendar home-page -->
    <string name="mindset_button_text">Mindset</string>
    <string name="plus_button_text">+</string>
    <string name="plus_button_description">Addition Dropdown</string>
    <string name="calendar_title_text">Training Days This Month</string>
    <string name="calendar_training_count_default">0</string>

    <string name="arrow_back_description">Arrow Back</string>
    <string name="arrow_next_description">Arrow Next</string>

    <string name="monday">M</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>

    <!--    Mindset window-->
    <string name="quote_author_text">Author</string>

    <!--    Plus drop-down menu-->
    <string name="menu_add_exercise">Add Exercise</string>
    <string name="menu_add_workout">Add Workout</string>
    <string name="menu_plan_program">Planning</string>

<!--    Calendar legend-->
    <string name="workout_title">Workout Title, Another</string>

    <!--    Plan daily window-->
    <string name="plan_daily_no_plans_text">No plans today yet...</string>
    <string name="plan_daily_attach_btn_text">Attach Workout</string>

<!--    AI card -->
    <string name="ai_card_title">AI Insights</string>
    <string name="ai_card_text">Processing your activity...</string>


<!--    Navigation Bottom Bar-->
    <string name="icon_home_title"/>
    <string name="icon_graphs_title"/>
    <string name="icon_profile_title"/>

<!--    Add exercise screen-->
    <string name="add_exercise_title">Add Exercise</string>
    <string name="add_exercise_media_description">New exercise image</string>

    <string name="exercise_title">Title *</string>
    <string name="exercise_title_hint">Enter exercise title (e.g. Push-up)</string>

    <string name="exercise_description">Description</string>
    <string name="exercise_description_hint">Briefly describe the exercise</string>

    <string name="exercise_steps">Steps</string>
    <string name="add_exercise_steps">Add a step</string>
    <string name="add_exercise_steps_hint">Describe the step&#8230;</string>

    <string name="exercise_notes">Notes</string>
    <string name="exercise_notes_description">Exercise Notes</string>
    <string name="exercise_notes_hint">Any additional notes or tips</string>

    <string name="exercise_basic_muscle_group_label">Primary Muscle Group *</string>
    <string name="exercise_type_label">Exercise Type</string>
    <string name="exercise_detail_muscle_group_label">Advanced Muscle Groups *</string>

    <string name="save_exercise">Save</string>
    <string name="cancel_exercise">Cancel</string>

<!--    Add workout screen-->
    <string name="add_workout_title">Add Workout</string>
    <string name="workout_title_label">Title *</string>
    <string name="workout_title_hint">Enter workout title (e.g. Full Body Workout)</string>

    <string name="workout_description">Description</string>
    <string name="workout_description_hint">Briefly describe the workout</string>

    <string name="workout_notes">Notes</string>
    <string name="workout_notes_hint">Any additional notes or tips</string>

    <string name="workout_colour_text">Colour *</string>
    <string name="workout_exercise_text">Exercises *</string>
    <string name="workout_exercise_title_text">Title</string>
    <string name="workout_add_exercise_button">Add Exercise</string>

    <string name="colour_picker_description">Colour Picker</string>

    <!--    Plan Program screen-->
    <string name="plan_program_title">Your Planning, Your Rules</string>
    <string name="plan_program_instruction_text">Attach workouts to specific days on the calendar</string>
    <string name="plan_program_apply_btn_text">Apply</string>
    <string name="plan_program_attach_btn_text">Attach Workout to Calendar</string>


    <string name="plan_program_attaching_text">Attaching: Workout Title</string>
    <string name="plan_program_instruction2_text">Tap dates on the calendar to schedule this workout</string>

    <!--    Planned workout item -->
    <string name="planned_workout_edit_text">Edit</string>


    <!--    Exercise list screen -->
    <string name="exercises_list_title">All Exercises</string>
    <string name="exercises_filtered_text">Count</string>
    <string name="exercises_filter_icon_description">Filter</string>
    <string name="exercises_search_hint">Search exercises...</string>

    <!--    Exercise select screen -->
    <string name="exercises_select_title">Select Exercises</string>
    <string name="exercises_select_filtered_text">Count</string>
    <string name="exercises_select_filter_icon_description">Filter</string>
    <string name="exercise_select_search_hint">Search exercises...</string>

    <string name="select_exercise">Select</string>
    <string name="cancel_exercise_selecting">Cancel</string>

    <!--    Exercise detail screen -->
    <string name="exercise_item_title">Exercise Title</string>
    <string name="exercise_item_media_description">Exercise Media</string>
    <string name="exercise_item_description_label">Description</string>
    <string name="exercise_item_description_text">Description Text</string>
    <string name="exercise_item_steps_label">Steps</string>
    <string name="exercise_item_steps_text">Steps Text</string>
    <string name="exercise_item_notes_label">Notes</string>
    <string name="exercise_item_notes_text">Notes Text</string>

    <string name="exercise_item_category_label">Category</string>
    <string name="exercise_item_chip_category_description">Muscles Categories List</string>

    <!--    Workout list screen -->
    <string name="workout_list_title">All Workouts</string>
    <string name="workout_filtered_text">Count</string>
    <string name="workout_filter_icon_description">Filter</string>
    <string name="workout_title_text">Full Body Strength</string>
    <string name="workout_title_description">A high-intensity workout focusing on all major muscle groups.</string>
    <string name="workout_search_hint">Search workouts...</string>


    <!--    Workout select screen -->
    <string name="workouts_select_title">Select Workouts</string>
    <string name="workouts_select_filtered_text">Filtered by: </string>
    <string name="workouts_select_filter_icon_description">Filter</string>
    <string name="workout_select_filter_icon_description">Filter</string>
    <string name="workout_select_search_hint">Search workouts...</string>

    <string name="select_workout">Select</string>
    <string name="cancel_workout_selecting">Cancel</string>

    <!--    Workout detail screen -->
    <string name="workout_item_title">Workout Title</string>
    <string name="workout_item_description">Description</string>
    <string name="workout_item_description_text">Description Text</string>
    <string name="workout_item_notes">Notes</string>
    <string name="workout_item_notes_text">Notes Text</string>

    <string name="exercises">Exercises</string>

<!--    Workout exercise item grid-->
    <string name="exercise_item_grid_category_text">Categories</string>
    <string name="exercise_item_grid_title_text">Title</string>


    <!--    Workout detail gallery image-->
    <string name="workout_item_galley_image_title">Exercise Title</string>

<!--    Full screen image-->


    <!--    Profile screen -->
    <string name="profile_my_goals">My Goals</string>
    <string name="profile_add_goal">Edit Goals</string>
    <string name="profile_exercises">Exercises</string>
    <string name="profile_workouts">Workouts</string>
    <string name="profile_settings">Settings</string>
    <string name="edit_icon_description">Edit your goal</string>
    <string name="my_goals_hint">My goals</string>

    <!-- Graphs screen -->
    <string name="graphs_title">Track Progress</string>
    <string name="discipline_consistency_title">Discipline Consistency</string>
    <string name="today_date">April 2026</string>
    <string name="percentCompleted">65%</string>
    <string name="graphSubtitle">You have completed 5 out of 8 workouts this month. Keep it up!</string>


    <string name="user_data_settings">My data</string>

<!--    Goal item -->
    <string name="goal_item_title">Goal Title</string>
    <string name="goal_item_description">And see what the discipline can create</string>
    <!--Filter screeen-->
    <string name="filter_screen_title">Filter</string>
</resources>