<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_page_background_colour"
    android:fillViewport="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/calendar_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_page_background_colour"
    tools:context=".logic.calendar.CalendarHomePageFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guideline_left_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guideline_right_percent" />


    <LinearLayout
        android:id="@+id/trainingStatsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/calendar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/calendar_title_text"
        android:fontFamily="@font/lexend_font"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#1A1A1A"/>

    <TextView
        android:id="@+id/trainingDaysCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/calendar_training_count_default"
        android:fontFamily="@font/lexend_font"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/survey_text_black"

        android:clickable="true"
        android:focusable="true"

        android:layout_marginTop="30dp"
        android:foreground="?attr/selectableItemBackground"/>
</LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mindsetButton"
        android:layout_width="0dp"
        android:layout_height="48dp"

        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/lexend_font"
        android:textColor="@color/mindset_button_text_colour"
        android:text="@string/mindset_button_text"

        app:cornerRadius="10dp"
        app:strokeWidth="1dp"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/mindset_button_stroke_colour"
        app:backgroundTint="@color/mindset_button_fill_colour"
        android:foreground="?attr/selectableItemBackground"
        android:elevation="10dp"

        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/trainingStatsContainer"
        app:layout_constraintBottom_toBottomOf="@id/trainingStatsContainer" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plusButton"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginEnd="25dp"

        android:contentDescription="@string/plus_button_description"
        android:foreground="?attr/selectableItemBackground"
        app:backgroundTint="@color/plus_button_background_colour"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="@id/trainingStatsContainer"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"

        app:layout_constraintTop_toTopOf="@id/trainingStatsContainer"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="44dp"
        app:rippleColor="#40FFFFFF"
        app:srcCompat="@drawable/custom_plus"
        app:tint="@color/plus_button_colour" />

    <LinearLayout
        android:id="@+id/calendar_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trainingStatsContainer">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_prev_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="35dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:contentDescription="@string/arrow_back_description"
            app:icon="@drawable/ic_arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/text_black_colour"
            app:iconSize="32dp"
            app:tint="@color/text_black_colour"
            android:foreground="?attr/selectableItemBackground" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/monthAndYear"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text=""
            android:fontFamily="@font/lexend_font"
            android:textColor="@color/text_black_colour"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_next_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="35dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="16dp"
            app:icon="@drawable/ic_arrow_next"
            android:contentDescription="@string/arrow_next_description"

            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/text_black_colour"
            app:iconSize="32dp"
            app:tint="@color/text_black_colour"
            android:foreground="?attr/selectableItemBackground" />
    </LinearLayout>

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@id/calendar_navigation">

        <TextView style="@style/CalendarHeaderStyle" android:text="@string/monday" />
        <TextView style="@style/CalendarHeaderStyle" android:text="@string/tuesday" />
        <TextView style="@style/CalendarHeaderStyle" android:text="@string/wednesday" />
        <TextView style="@style/CalendarHeaderStyle" android:text="@string/thursday" />
        <TextView style="@style/CalendarHeaderStyle" android:text="@string/friday" />
        <TextView style="@style/CalendarHeaderStyle" android:text="@string/saturday" />
        <TextView style="@style/CalendarHeaderStyle" android:text="@string/sunday" />
    </LinearLayout>

    <!-- days view -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layoutManager="GridLayoutManager"
        app:spanCount="7"
        app:layout_constraintTop_toBottomOf="@id/calendar_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <GridLayout
        android:id="@+id/legendContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        app:layout_constraintTop_toBottomOf="@id/calendar_recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <include
        android:id="@+id/aiCard"
        layout="@layout/ai_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardElevation="6dp"

        app:layout_constraintTop_toBottomOf="@id/legendContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/dailyPlanWindow"
        layout="@layout/plan_daily_window" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

